--- a/config-server-client-development.properties
+++ b/config-server-client-development.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server - Development Env ssw
+msg = Hello world - this is from config server - Development Env OpenText 07-May Got Lucky
