--- a/micropay-users-production.properties
+++ b/micropay-users-production.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server - Prodcution Environment --This got updated new
+msg = Hello world - this is from config server - Prodcution Environment --This got updated
